objects/Monitoring_Item_junction__c.object
<CustomObject>
    <description>Junction to establish many to many</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash Orders Redesign - lookup field to Item record that is selected when creating a monitoring line item based on it&apos;s module configuration record</description>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Monitoring_Item_junction</relationshipLabel>
        <relationshipName>Monitoring_Item_junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitoring_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash Orders Redesign - lookup field to tie a monitoring item to a specific monitoring configuration and one or more module configurations</description>
        <label>Monitoring Configuration</label>
        <referenceTo>Monitoring_Configuration__c</referenceTo>
        <relationshipLabel>Monitoring_Item_junction</relationshipLabel>
        <relationshipName>Monitoring_Item_junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Kit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Monitoring_Item_junction</label>
    <nameField>
        <label>Monitoring_Item_junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitoring_Item_junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>